fixed scale component header alignment

--- a/crowdsourcing/task3/webapp/src/components/Questions/ScaleQuestion/ScaleQuestionHeader/styles.css
+++ b/crowdsourcing/task3/webapp/src/components/Questions/ScaleQuestion/ScaleQuestionHeader/styles.css
@@ -10,8 +10,9 @@
     border-color: blue;
     width:90%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
 .scaleheader-input{
